Fix css alignment

--- a/src/components/Loading/loading.module.css
+++ b/src/components/Loading/loading.module.css
@@ -1,14 +1,14 @@
 .loading {
-  position: absolute;
+  position: fixed;
+  z-index: 9999;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 9999;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .loading img {
